Improve onboarding messaging

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,23 +25,21 @@ en:
       invalid: "Email is invalid"
 
   onboarding:
-    title: "Let's keep that code in style:"
-    step_one_title: "Activate Hound on a repo."
-    step_one_alt_title: "Hound is active on %{count} of your repos!"
+    title: "Let's keep that code in check:"
+    step_one_title: "Add GitHub repos."
     step_one_desc:
-      "Hound watches for pull requests on all active repos.
-      Activating public repos is free; private repos are priced by tier."
-    step_one_link: "Details"
-    step_two_title: "Open a GitHub pull request on the active repo."
+      "Install our GitHub app on your repos to give it access to your pull request activity and to make comments on GitHub."
+    step_two_title: "Activate Hound on a repo."
+    step_two_alt_title: "Hound is activated on %{count} of your repos!"
     step_two_desc:
-      "Hound will review all GitHub pull requests that are
-      opened on an activated repo for violations of your style
-      guide."
-    step_three_title: "Hound comments on your pull request."
+      "Activating a repo lets Hound actively listen for pull request activity
+      on that repo. Activating public repos is free! Private repos are priced
+      by tier."
+    account_link: "Details"
+    step_three_title: "Open a GitHub pull request on your repo."
     step_three_desc:
-      "If Hound finds any violations of your style guide it will
-      comment inline on the violation in your GitHub pull
-      request."
+      "Hound reviews code in your GitHub pull requests. If Hound finds any
+      issues it will comment inline on your pull request."
 
   plans:
     open_source:
